--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "nodemailer": "^6.7.5"
